# isimip-qc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
isimip_qc/: __init__.py  config.py  exceptions.py  fixes.py  main.py  models.py
isimip_qc/checks/: 3d.py  __init__.py  attributes.py  dataset.py  datasets.py  dimensions.py  experiments.py  identifiers.py  variables.py
isimip_qc/checks/variables/: depth.py  lat.py  latlon.py  lon.py  time.py  time_resolution.py  var.py  var3d.py
isimip_qc/tests/: test_contact.py
isimip_qc/utils/: __init__.py  cdo.py  cli.py  contact.py  datamodel.py  definitions.py  experiments.py  fetch.py  files.py  grid.py  logging.py  netcdf.py
requirements/: common.txt  dev.txt
