[project]
name = "isimip-qc"
authors = [
    { name = "Matthias Büchner", email = "buechner@pik-potsdam.de"},
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Matthias Büchner", email = "buechner@pik-potsdam.de"},
]
description = "A command line tool for the quality control of climate impact data of the ISIMIP project."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "colorlog",
    "isimip-utils>=1.2",
    "jsonschema",
    "netCDF4",
    "prettytable",
    "python-dotenv",
    "requests"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-qc"

[project.scripts]
isimip-qc = "isimip_qc.main:main"

[tool.setuptools.dynamic]
version = { attr = "isimip_qc.__version__" }

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "B006",   # mutable-argument-default
    "B007",   # unused-loop-control-variable
    "B018",   # useless-expression
    "RUF012", # mutable-class-default
]

[tool.ruff.isort]
known-first-party = [
    "isimip_qc"
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isimip_utils",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
isimip_utils = ["isimip_utils"]
