[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
name = "isimip-qc"
authors = [
    { name = "Matthias Büchner", email = "buechner@pik-potsdam.de"},
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Matthias Büchner", email = "buechner@pik-potsdam.de"},
]
description = "A command line tool for the quality control of climate impact data of the ISIMIP project."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14'
]

dependencies = [
    "isimip-utils~=2.0",
    "jsonschema",
    "netCDF4",
    "prettytable",
    "python-dotenv",
    "requests"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-qc"
Issues = "https://github.com/ISI-MIP/isimip-qc/issues"

[project.scripts]
isimip-qc = "isimip_qc.main:main"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = [
    "isimip_qc"
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isimip_utils",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
isimip_utils = ["isimip_utils"]

[tool.typos.default.extend-identifiers]
CHECKs = "CHECKs"
ERRORs = "ERRORs"
WARNINGs = "WARNINGs"
criticals = "criticals"
has_criticals = "has_criticals"
calenders_daily = "calenders_daily"  # TODO: remove when isimip-protocol-3 is fixed
