[metadata]
name = isimip-qc
version = attr: isimip_qc.VERSION
description = A command line tool for the quality control of climate impact data of the ISIMIP project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ISI-MIP/isimip-qc
author = Matthias Büchner, Jochen Klar
email = buechner@pik-potsdam.de, jochen.klar@pik-potsdam.de
license = MIT
classifiers =
    # see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    colorlog
    isimip-utils
    jsonschema
    netCDF4
    prettytable
    python-dotenv
    requests

[options.entry_points]
console_scripts =
  isimip-qc = isimip_qc.main:main
